force-app/main/default/objects/RFQ_Quote__c/RFQ_Quote__c.object-meta.xml
<CustomObject>
    <label>購買見積回答</label>
    <nameField>
        <displayFormat>QT-{0000}</displayFormat>
        <label>購買見積回答番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>購買見積回答</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>