force-app/main/default/objects/RFQ_Quote__c/fields/AI_Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>AI_Lead_Time_Days__c</fullName>
    <label>AI抽出: 納期日数</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
</CustomField>