force-app/main/default/objects/RFQ_Quote__c/fields/AI_Lead_Time_Days_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Lead_Time_Days_Confidence__c</fullName>
    <label>AI抽出: 納期日数信頼度</label>
    <type>Percent</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>