force-app/main/default/objects/RFQ_Quote__c/fields/AI_Manufacturing_Site__c.field-meta.xml
<CustomField>
    <fullName>AI_Manufacturing_Site__c</fullName>
    <label>AI抽出: 製造拠点</label>
    <type>Text</type>
    <length>255</length>
</CustomField>