force-app/main/default/objects/RFQ_Quote__c/fields/AI_Manufacturing_Site_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Manufacturing_Site_Confidence__c</fullName>
    <label>AI抽出: 製造拠点信頼度</label>
    <type>Percent</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>