force-app/main/default/objects/RFQ_Quote__c/fields/AI_MOQ__c.field-meta.xml
<CustomField>
    <fullName>AI_MOQ__c</fullName>
    <label>AI抽出: 最小発注数量</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>