force-app/main/default/objects/RFQ_Quote__c/fields/AI_Notes__c.field-meta.xml
<CustomField>
    <fullName>AI_Notes__c</fullName>
    <label>AI抽出: 備考</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>