force-app/main/default/objects/RFQ_Quote__c/fields/AI_Response_Date__c.field-meta.xml
<CustomField>
    <fullName>AI_Response_Date__c</fullName>
    <label>AI抽出: 回答日</label>
    <type>Date</type>
</CustomField>