force-app/main/default/objects/RFQ_Quote__c/fields/AI_Supplier_Text__c.field-meta.xml
<CustomField>
    <fullName>AI_Supplier_Text__c</fullName>
    <label>AI抽出: サプライヤー名(生テキスト)</label>
    <type>Text</type>
    <length>255</length>
</CustomField>