force-app/main/default/objects/RFQ_Quote__c/fields/AI_Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>AI_Valid_Until__c</fullName>
    <label>AI抽出: 有効期限</label>
    <type>Date</type>
</CustomField>