force-app/main/default/objects/RFQ_Quote__c/fields/AI_Valid_Until_Confidence__c.field-meta.xml
<CustomField>
    <fullName>AI_Valid_Until_Confidence__c</fullName>
    <label>AI抽出: 有効期限信頼度</label>
    <type>Percent</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>