force-app/main/default/objects/RFQ_Quote__c/fields/IDP_Confirmed_At__c.field-meta.xml
<CustomField>
    <fullName>IDP_Confirmed_At__c</fullName>
    <label>IDP: 確認完了日時</label>
    <type>DateTime</type>
</CustomField>