force-app/main/default/objects/RFQ_Quote__c/fields/IDP_Document_URL__c.field-meta.xml
<CustomField>
    <fullName>IDP_Document_URL__c</fullName>
    <label>IDP: ドキュメントURL</label>
    <type>Url</type>
</CustomField>