force-app/main/default/objects/RFQ_Quote__c/fields/IDP_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>IDP_Error_Message__c</fullName>
    <label>IDP: エラー詳細</label>
    <type>Text</type>
    <length>255</length>
</CustomField>