force-app/main/default/objects/RFQ_Quote__c/fields/IDP_Extracted_At__c.field-meta.xml
<CustomField>
    <fullName>IDP_Extracted_At__c</fullName>
    <label>IDP: 抽出完了日時</label>
    <type>DateTime</type>
</CustomField>