force-app/main/default/objects/RFQ_Quote__c/fields/IDP_Judged_At__c.field-meta.xml
<CustomField>
    <fullName>IDP_Judged_At__c</fullName>
    <label>IDP: 判定完了日時</label>
    <type>DateTime</type>
</CustomField>