force-app/main/default/objects/RFQ_Quote__c/fields/IDP_Judgment_Summary__c.field-meta.xml
<CustomField>
    <fullName>IDP_Judgment_Summary__c</fullName>
    <label>IDP: 判定サマリ</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>