force-app/main/default/objects/RFQ_Quote__c/fields/IDP_Overall_Discrepancy_Level__c.field-meta.xml
<CustomField>
    <fullName>IDP_Overall_Discrepancy_Level__c</fullName>
    <label>IDP: 全体相違レベル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IDP_Discrepancy_Level</valueSetName>
    </valueSet>
</CustomField>