force-app/main/default/objects/RFQ_Quote__c/fields/IDP_Review_Note__c.field-meta.xml
<CustomField>
    <fullName>IDP_Review_Note__c</fullName>
    <label>IDP: 確認メモ</label>
    <type>LongTextArea</type>
    <length>2000</length>
</CustomField>