force-app/main/default/objects/RFQ_Quote__c/fields/IDP_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>IDP_Review_Status__c</fullName>
    <label>IDP: レビューステータス</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>担当者入力完了</fullName><default>true</default><label>担当者入力完了</label></value>
            <value><fullName>AI判定待ち</fullName><default>false</default><label>AI判定待ち</label></value>
            <value><fullName>担当者確認中</fullName><default>false</default><label>担当者確認中</label></value>
            <value><fullName>担当者確認済</fullName><default>false</default><label>担当者確認済</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>