force-app/main/default/objects/RFQ_Quote__c/fields/Lead_Time_Days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Days__c</fullName>
    <label>リードタイム（日）</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>0</scale>
</CustomField>