force-app/main/default/objects/RFQ_Quote__c/fields/Lead_Time_Days_Discrepancy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_Days_Discrepancy_Reason__c</fullName>
    <label>納期日数相違根拠</label>
    <type>Text</type>
    <length>255</length>
</CustomField>