force-app/main/default/objects/RFQ_Quote__c/fields/Manufacturing_Site__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Site__c</fullName>
    <label>製造拠点</label>
    <type>Lookup</type>
    <referenceTo>Manufacturing_Site__c</referenceTo>
    <relationshipLabel>見積回答</relationshipLabel>
    <relationshipName>RFQ_Quotes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>