force-app/main/default/objects/RFQ_Quote__c/fields/Manufacturing_Site_Discrepancy_Level__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Site_Discrepancy_Level__c</fullName>
    <label>製造拠点相違レベル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IDP_Discrepancy_Level</valueSetName>
    </valueSet>
</CustomField>