force-app/main/default/objects/RFQ_Quote__c/fields/Manufacturing_Site_Discrepancy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Site_Discrepancy_Reason__c</fullName>
    <label>製造拠点相違根拠</label>
    <type>Text</type>
    <length>255</length>
</CustomField>