force-app/main/default/objects/RFQ_Quote__c/fields/MOQ__c.field-meta.xml
<CustomField>
    <fullName>MOQ__c</fullName>
    <label>最小発注数量</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>