force-app/main/default/objects/RFQ_Quote__c/fields/MOQ_Discrepancy_Reason__c.field-meta.xml
<CustomField>
    <fullName>MOQ_Discrepancy_Reason__c</fullName>
    <label>MOQ相違根拠</label>
    <type>Text</type>
    <length>255</length>
</CustomField>