force-app/main/default/objects/RFQ_Quote__c/fields/Notes_Discrepancy_Level__c.field-meta.xml
<CustomField>
    <fullName>Notes_Discrepancy_Level__c</fullName>
    <label>備考相違レベル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IDP_Discrepancy_Level</valueSetName>
    </valueSet>
</CustomField>