force-app/main/default/objects/RFQ_Quote__c/fields/Notes_Discrepancy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Notes_Discrepancy_Reason__c</fullName>
    <label>備考相違根拠</label>
    <type>Text</type>
    <length>255</length>
</CustomField>