force-app/main/default/objects/RFQ_Quote__c/fields/Response_Date_Discrepancy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Response_Date_Discrepancy_Reason__c</fullName>
    <label>回答日相違根拠</label>
    <type>Text</type>
    <length>255</length>
</CustomField>