force-app/main/default/objects/RFQ_Quote__c/fields/RFQ__c.field-meta.xml
<CustomField>
    <fullName>RFQ__c</fullName>
    <label>見積依頼</label>
    <type>MasterDetail</type>
    <referenceTo>RFQ__c</referenceTo>
    <relationshipLabel>見積回答</relationshipLabel>
    <relationshipName>Quotes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
</CustomField>