force-app/main/default/objects/RFQ_Quote__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <label>評価スコア</label>
    <type>Number</type>
    <precision>3</precision>
    <scale>0</scale>
</CustomField>