force-app/main/default/objects/RFQ_Quote__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>ステータス</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>依頼中</fullName><default>true</default><label>依頼中</label></value>
            <value><fullName>回答済</fullName><default>false</default><label>回答済</label></value>
            <value><fullName>辞退</fullName><default>false</default><label>辞退</label></value>
            <value><fullName>採用</fullName><default>false</default><label>採用</label></value>
            <value><fullName>不採用</fullName><default>false</default><label>不採用</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>