force-app/main/default/objects/RFQ_Quote__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>サプライヤー</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>見積回答</relationshipLabel>
    <relationshipName>RFQ_Quotes</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>