force-app/main/default/objects/RFQ_Quote__c/fields/Supplier_Discrepancy_Level__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Discrepancy_Level__c</fullName>
    <label>サプライヤー相違レベル</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>IDP_Discrepancy_Level</valueSetName>
    </valueSet>
</CustomField>