force-app/main/default/objects/RFQ_Quote__c/fields/Supplier_Discrepancy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Discrepancy_Reason__c</fullName>
    <label>サプライヤー相違根拠</label>
    <type>Text</type>
    <length>255</length>
</CustomField>