force-app/main/default/objects/RFQ_Quote__c/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <label>提示単価</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>0</scale>
</CustomField>