force-app/main/default/objects/RFQ_Quote__c/fields/Unit_Price_Discrepancy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price_Discrepancy_Reason__c</fullName>
    <label>単価相違根拠</label>
    <type>Text</type>
    <length>255</length>
</CustomField>