force-app/main/default/objects/RFQ_Quote__c/fields/Valid_Until__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until__c</fullName>
    <label>見積有効期限</label>
    <type>Date</type>
</CustomField>