force-app/main/default/objects/RFQ_Quote__c/fields/Valid_Until_Discrepancy_Reason__c.field-meta.xml
<CustomField>
    <fullName>Valid_Until_Discrepancy_Reason__c</fullName>
    <label>有効期限相違根拠</label>
    <type>Text</type>
    <length>255</length>
</CustomField>